Fix word wrap in panel cell

--- a/less/bootstrap-theme/panels.less
+++ b/less/bootstrap-theme/panels.less
@@ -208,6 +208,7 @@
 
     .panel-cell {
         .control-label {
+            word-wrap: break-word;
             .control-label();
 
             &.required:after {
@@ -227,6 +228,7 @@
         .block-control {
             padding-top: 10px;
             padding-bottom: 10px;
+            word-wrap: break-word;
 
             &.block-choice,
             &.block-repeated {
